@@ -15,7 +15,6 @@ import java.time.ZoneOffset;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Entity(name = "rosters")
 public class RosterEntity implements Serializable {
@@ -160,7 +159,6 @@ public class RosterEntity implements Serializable {
                     final AttributionRelationship relationship = new AttributionRelationship(roster, patientEntity, now);
                     relationship.setPeriodEnd(expires);
                     return relationship;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 }
