@@ -9,13 +9,15 @@ import gov.cms.dpc.fhir.FHIRExtractors;
 import gov.cms.dpc.fhir.converters.FHIRConverter;
 import gov.cms.dpc.fhir.converters.FHIREntityConverter;
 import gov.cms.dpc.fhir.validations.profiles.OrganizationProfile;
-import org.hl7.fhir.dstu3.model.*;
+import org.hl7.fhir.dstu3.model.Address;
+import org.hl7.fhir.dstu3.model.Identifier;
+import org.hl7.fhir.dstu3.model.Meta;
+import org.hl7.fhir.dstu3.model.Organization;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class OrganizationEntityConverter implements FHIRConverter<Organization, OrganizationEntity> {
     @Override
@@ -70,7 +72,7 @@ public class OrganizationEntityConverter implements FHIRConverter<Organization, 
                 .getContact()
                 .stream()
                 .map(r -> converter.fromFHIR(ContactEntity.class, r))
-                .collect(Collectors.toList());
+                .toList();
         // Add the entity reference
         contactEntities.forEach(contact -> contact.setOrganization(entity));
         entity.setContacts(contactEntities);
@@ -91,7 +93,7 @@ public class OrganizationEntityConverter implements FHIRConverter<Organization, 
         final List<Organization.OrganizationContactComponent> contactComponents = entity.getContacts()
                 .stream()
                 .map(ContactEntity::toFHIR)
-                .collect(Collectors.toList());
+                .toList();
         org.setContact(contactComponents);
 
         return org;
